<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/setting_fftsize"
        android:title="@string/setting_fftsize"
        android:orderInCategory="100"
        android:showAsAction="never" >
        <menu>
            <item android:id="@+id/setting_fftsize_16384" android:title="@string/setting_fftsize_16384" /><item android:id="@+id/setting_fftsize_8192" android:title="@string/setting_fftsize_8192" /><item android:id="@+id/setting_fftsize_4096" android:title="@string/setting_fftsize_4096" /><item android:id="@+id/setting_fftsize_2048" android:title="@string/setting_fftsize_2048" /><item android:id="@+id/setting_fftsize_1024" android:title="@string/setting_fftsize_1024"/>
            
            
            
            
        </menu>
    </item>
    
    <group android:id="@+id/setting_group1">
        <item android:id="@+id/setting_item_quad_inter" android:title="@string/enable_quad_inter"></item>
    </group>
</menu>
